Fix decompile crashes on switch cases and nested try/catch in a catch